--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/menu.js"></script>
     <!-- <script src="index.js"></script> -->
     <!-- header 스크롤에 따라 fade & out -->
     <link rel="stylesheet" href="Paperlogy/Paperlogy.css">
@@ -40,7 +42,7 @@
     <header>
         <h1>Nam Gyuri</h1>
         <input type="checkbox" id="icon">
-        <label for="icon">  <!--label은 인라인 스타일-->
+        <label for="icon" class="menu_btn">  <!--label은 인라인 스타일-->
             <span></span>
             <span></span>
             <span></span>
