--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/menu.js"></script>
 
     <link rel="stylesheet" href="Paperlogy/Paperlogy.css">
     <link rel="stylesheet" href="css/common.css">
@@ -29,7 +30,7 @@
     <header>
         <h1>Nam Gyuri</h1>
         <input type="checkbox" id="icon">
-        <label for="icon">  <!--label은 인라인 스타일-->
+        <label for="icon" class="menu_btn">  <!--label은 인라인 스타일-->
             <span></span>
             <span></span>
             <span></span>
